average-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: average
  labels:
    app: average
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: average.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: average
                port:
                  number: 80
